--- a/index.html
+++ b/index.html
@@ -39,5 +39,16 @@ We’ll walk you through everything from selecting a good text editor<br>
 <p>
     <a href="https://opentutorials.org">opentutorials</a>
 </p>
+  <p>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1F0R09DSNT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1F0R09DSNT');
+</script>
+  </P>
 </body>
 </html>
