--- a/2.html
+++ b/2.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
 <head>
+    <p>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1F0R09DSNT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1F0R09DSNT');
+</script>
+  </P>
 <title>WEB -  CSS</title>
 <meta charset="utf-8">
 </head>
